--- a/public/css/navigation/HeaderMenu.module.css
+++ b/public/css/navigation/HeaderMenu.module.css
@@ -1,13 +1,13 @@
 
 .header {
-    height: rem(56px);
+    height: rem(80px);
     border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
   }
   
   .inner {
-    height: rem(56px);
+    height: rem(80px);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -20,7 +20,7 @@
     border-radius: var(--mantine-radius-sm);
     text-decoration: none;
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
-    font-size: var(--mantine-font-size-sm);
+    font-size: var(--mantine-font-size-lg);
     font-weight: 500;
   
     @mixin hover {
